fixing details alignment issue

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -160,3 +160,8 @@ h1 {
   margin: 0;
   font-weight: normal;
 }
+
+.details_content
+{
+  margin-top: 10px;
+}
